<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:padding="10dp"
  android:background="@color/gray_50"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <TextView
      android:labelFor="@id/et_note"
      android:id="@+id/tv_note_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_todo_item" />
    <EditText
      android:id="@+id/et_note"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autofillHints="@string/edit_placeholder_todo_item"
      android:hint="@string/edit_placeholder_todo_item"
      android:inputType="text"
      tools:ignore="LabelFor" />
  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
      android:id="@+id/btn_read_from_sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:text="@string/btn_label_sharepref_read"
      tools:ignore="ButtonStyle" />
    <Button
      android:id="@+id/btn_write_to_sp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:text="@string/btn_label_sharepref_write"
      tools:ignore="ButtonStyle" />
  </LinearLayout>
</LinearLayout>