<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="10dp"
  android:orientation="vertical">

  <com.google.android.material.button.MaterialButtonToggleGroup
    android:gravity="center"
    android:id="@+id/btn_tabs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:selectionRequired="true"
    app:singleSelection="true">
    <Button
      android:id="@+id/btn_fileio"
      android:text="@string/btn_label_fileio"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btn_sharedpref"
      android:text="@string/btn_label_sharedpref"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

    <Button
      android:id="@+id/btn_sqlite"
      android:text="@string/btn_label_sqlite"
      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </com.google.android.material.button.MaterialButtonToggleGroup>

  <androidx.fragment.app.FragmentContainerView
    android:id="@+id/fragment_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
</LinearLayout>